// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions > site generic model actions create should work 1`] = `
Object {
  "payload": Object {
    "args": Array [
      "/site/new-entity-id",
    ],
    "method": "push",
  },
  "type": "@@router/CALL_HISTORY_METHOD",
}
`;

exports[`actions > site generic model actions delete should work 1`] = `
Object {
  "payload": Object {
    "args": Array [
      "/",
    ],
    "method": "push",
  },
  "type": "@@router/CALL_HISTORY_METHOD",
}
`;

exports[`actions > site generic model actions update should work 1`] = `
Object {
  "payload": Object {
    "args": Array [
      "/site/site-2",
    ],
    "method": "push",
  },
  "type": "@@router/CALL_HISTORY_METHOD",
}
`;
